--- a/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
+++ b/frontend/src/app/components/user-dashboard/boughtproducts/boughtproducts.component.html
@@ -23,7 +23,7 @@
 
       <div class="fontreal" *ngIf="transaction.transactionStatus==2">
         <br>
-        <b>Status: Sold</b>
+        <b>Status: sold</b>
 
         <br>
         <b class="fontreal">Bought by:</b>
@@ -37,7 +37,7 @@
 
       <div *ngIf="transaction.transactionStatus==3">
         <br>
-        <b>Status: Declined</b>
+        <b>Status: declined</b>
 
       </div>
 
