--- a/frontend/src/app/components/product-item/product-item.component.html
+++ b/frontend/src/app/components/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 <mat-card class="productItem_Card">
     <mat-card-header>
-      <mat-card-title class= "clickable" [routerLink]="['/productDetail', productItem.productId]" routerLinkActive="active">{{productItem.productName}}</mat-card-title>   <br> 
+      <mat-card-title class= "clickable" [routerLink]="['/productDetail', productItem.productId]" routerLinkActive="active">{{productItem.productName}}</mat-card-title>   <br>
    </mat-card-header>
     <br>
 
@@ -10,7 +10,7 @@
 
     <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
     <br>
-    <mat-card-content> Price {{productItem.productPrice}}.- CHF </mat-card-content>
+    <mat-card-content> Price {{productItem.productPrice}} CHF </mat-card-content>
     <br>
     <hr>
     <br>
@@ -18,7 +18,7 @@
         <span [routerLink]="['/s']" [queryParams]="{c: productItem.productCategory}" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}} </span> <br>
         <span [routerLink]="['/s']" [queryParams]="{z: productItem.productLocation}" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}} </span>
         <span *ngIf="productItem.isService">Service </span> <br>
-        <span *ngIf="productItem.isRentable">rentable </span> <br>
+        <span *ngIf="productItem.isRentable">Rentable </span> <br>
         <span class="available" *ngIf="productItem.isAvailable">available</span>
         <span class="sold" *ngIf="!productItem.isAvailable">available</span>
       </mat-card-footer>
