--- a/frontend/src/app/components/snake-component/snake-component.component.html
+++ b/frontend/src/app/components/snake-component/snake-component.component.html
@@ -8,7 +8,7 @@
 <div class="board">
   <div class="spacer"></div>
   <div class="score-list">
-    Snake Score ranking
+    Snake score ranking
     <ol>
       <li *ngFor="let user of topTenGame">{{ user.userName + ' : ' + user.gameScore}}</li>
     </ol>
@@ -42,7 +42,7 @@
     <button *ngIf="!playing" (click)="play()">PLAY</button>
     <button *ngIf="playing" (click)="pause()">PAUSE</button>
     <button (click)="toggleInstructions()">Instructions</button>
-    <button (click)="saveHighscore()">Save Highscore</button>
+    <button (click)="saveHighscore()">Save highscore</button>
     <button (click)="quit()">quit</button>
   </div>
 </div>
