--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -4,7 +4,7 @@
 <mat-card class= "myProfile">
   <mat-card-header>
 
-    <mat-card-title class = "myProfile">{{userName}}'s Profile: </mat-card-title>
+    <mat-card-title class = "myProfile">{{userName}}'s profile: </mat-card-title>
   </mat-card-header>
   <mat-card-content class="content">
    <div> Address: <br>
@@ -13,7 +13,7 @@
     {{userAddressPin}} {{userAddressCity}} <br>
     {{userAddressCountry}}     <br>
      <br> <b>
-     Your current Score:
+     Your current score:
      {{userScore}}
      </b>
     <br>
@@ -25,7 +25,7 @@
   <br>
     <br>
   </div>
-  <button mat-flat-button class="button_standard" [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit Profile</button>
+  <button mat-flat-button class="button_standard" [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit profile</button>
   <div>
 
 </div>
@@ -35,7 +35,7 @@
 
 </mat-tab>
 
-<mat-tab label = "Your current Products">
+<mat-tab label = "Your current products">
   <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
 
     <div  *ngFor="let productItem of productList">
