changed button in registration

--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -206,7 +206,7 @@
 
       <div *ngIf="!edit">
 
-        <button mat-flat-button class="button_standard" (click)="registration()" [disabled]="!allFieldsAreFilled()">Registration</button>
+        <button mat-flat-button class="button_standard" (click)="registration()" [disabled]="!allFieldsAreFilled()">Yes</button>
 
       </div>
       <div *ngIf="edit">
