--- a/frontend/src/app/components/dialog-body/dialog-body.component.html
+++ b/frontend/src/app/components/dialog-body/dialog-body.component.html
@@ -1,4 +1,5 @@
-<h2 mat-dialog-title>Reset password</h2>
+<div class="dialog">
+<h2 class=" dialog" mat-dialog-title>Reset password</h2>
 <div mat-dialog-content>
   <p>Please enter a valid email</p>
   <mat-form-field>
@@ -10,4 +11,5 @@
     <mat-icon>close</mat-icon>
   </button>
   <button mat-button (click)="closeDialog(email)" [disabled]="empty(email) || !validateEmail(email)" [routerLink]="['/login']">Submit</button>
+</div>
 </div>
