--- a/frontend/src/app/components/password-forgotten/password-forgotten.component.html
+++ b/frontend/src/app/components/password-forgotten/password-forgotten.component.html
@@ -1,6 +1,7 @@
 <div>
   <mat-card>
-  <mat-card-title>Reset password</mat-card-title>
+
+  <mat-card-title class="pressStart">Reset password</mat-card-title>
     <br>
   <mat-card-content>
     <mat-form-field >
