--- a/frontend/src/app/components/password-forgotten/password-forgotten.component.html
+++ b/frontend/src/app/components/password-forgotten/password-forgotten.component.html
@@ -1,5 +1,5 @@
-<div>
-  <mat-card>
+
+  <mat-card class="pw">
   <mat-card-title>Reset password</mat-card-title>
     <br>
   <mat-card-content>
@@ -28,5 +28,5 @@
     <button mat-button (click)="resetPassword(password)" [routerLink]="['/login']" [disabled]="!validatePassword()">Submit</button>
   </mat-card-actions>
 </mat-card>
-</div>
+
 
